# hyperpolymath-archive

./: .gitignore  0-AI-MANIFEST.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  SECURITY.md  TOPOLOGY.md
asdf-acceleration-middleware/: .gitlab-ci.yml  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  MAINTAINERS.md  README.adoc  SECURITY.md
asdf-acceleration-middleware/.github/workflows/: ci.yml  release.yml
asdf-acceleration-middleware/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
asdf-acceleration-middleware/crates/asdf-accelerate/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-bench/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-cache/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-config/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-core/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-discover/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-metrics/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-monitor/: Cargo.toml
asdf-acceleration-middleware/crates/asdf-parallel/: Cargo.toml
asdf-acceleration-middleware/docs/: ARCHITECTURE.md  CITATIONS.adoc  QUICKSTART.md  TPCF.md
asdf-acceleration-middleware/examples/: config.ncl  config.toml
asdf-acceleration-middleware/fuzz/: Cargo.toml
asdf-acceleration-middleware/lib/: utils.bash
asdf-plugin-configurator/: .gitignore  Cargo.toml  README.adoc  ROADMAP.adoc
asdf-plugin-configurator/.github/workflows/: ci.yml  mirror.yml  quality.yml  rsr-antipattern.yml  scorecard.yml
asdf-plugin-configurator/fuzz/: Cargo.toml
asdf-plugin-configurator/lib/: utils.bash
asdf-plugin-configurator/src/: config.rs  main.rs  registry.rs
asdf-plugin-configurator/src/commands/: export.rs  init.rs  install.rs  list.rs  mod.rs  sync.rs  validate.rs
ephapax-playground/backend/: Cargo.toml
ephapax-playground/backend/src/: main.rs
file-soup/: .dockerignore  .editorconfig  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  PROJECT_SUMMARY.md  README.adoc  SECURITY.md  docker-compose.yml
file-soup/.clusterfuzzlite/: Dockerfile  project.yaml
file-soup/.github/workflows/: ci.yml  release.yml
file-soup/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
file-soup/crates/fslint-cli/: Cargo.toml
file-soup/crates/fslint-core/: Cargo.toml
file-soup/crates/fslint-plugin-api/: Cargo.toml
file-soup/crates/fslint-plugin-sdk/: Cargo.toml
file-soup/docs/: CITATIONS.adoc  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  RSR_COMPLIANCE.md  TPCF.md
file-soup/examples/: config-development.toml  config-full.toml  config-minimal.toml  config-security.toml
file-soup/fuzz/: Cargo.toml
file-soup/plugins/ai-detection/: Cargo.toml
file-soup/plugins/duplicate-finder/: Cargo.toml
file-soup/plugins/file-age/: Cargo.toml
file-soup/plugins/git-status/: Cargo.toml
file-soup/plugins/grouping/: Cargo.toml
file-soup/plugins/ocr-status/: Cargo.toml
file-soup/plugins/secret-scanner/: Cargo.toml
file-soup/plugins/version-detection/: Cargo.toml
file-soup/scripts/: dev.sh  install.ps1  install.sh  release.sh  uninstall.sh  verify-rsr.sh
fslint-plugin-api/: .editorconfig  0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml  README.adoc
fslint-plugin-api/.github/workflows/: rust-ci.yml
fslint-plugin-api/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
fslint-plugin-api/fuzz/: Cargo.toml
fslint-plugin-sdk/: 0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml  README.adoc  justfile
fslint-plugin-sdk/.github/workflows/: generator-generic-ossf-slsa3-publish.yml  rust-ci.yml  semgrep.yml
fslint-plugin-sdk/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
fslint-plugin-sdk/fuzz/: Cargo.toml
sinople-journal-theme/: .gitlab-ci.yml  .prettierrc.json  .stylelintrc.json  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  INSTALL.md  MAINTAINERS.md  README-DEPLOYMENT.md  README.adoc  ROADMAP.adoc  RSR-COMPLIANCE.md  RSR-SILVER-ACHIEVEMENT.md  SECURITY.md  TESTING.md  bsconfig.json  changelog.md  composer.json  deno.json  docker-compose.dev.yml  docker-compose.prod.yml  footer.php  functions.php  header.php  index.php  metadata.jsonld  phpcs.xml.dist  phpstan.neon  phpunit.xml  rescript.json  seccomp.json  sidebar.php  sinople.ttl  style.css  sw.js
sinople-journal-theme/.github/: dependabot.yml  renovate.json
sinople-journal-theme/assets/scss/: main.scss
sinople-journal-theme/assets/wasm/: Cargo.toml  lib.rs
sinople-journal-theme/beam/: mix.exs
sinople-journal-theme/config/: nginx.conf
sinople-journal-theme/content/: EXPLAINME.md
sinople-journal-theme/content/field-notes/: fog-breathing.md
sinople-journal-theme/content/metadata/: fog-breathing.jsonld
sinople-journal-theme/docs/: CITATIONS.adoc  PHP-SECURITY-INTEGRATION.md  PORTALS.md  README.md  contributing-philosophy.md  ethos.md  spans.md  styles-guide.md  taxonomy.md
sinople-journal-theme/entries/: EXPLAINME.md
sinople-journal-theme/inc/: accessibility.php  aegis-integration.php  capnproto.php  enqueue.php  flatbuffers.php  indieweb.php  modern-features.php  ndjson-feed.php  performance.php  privacy.php  security.php  semantic.php  serialization.php  setup.php  spans.php  taxonomies.php  turtle-output.php  void-integration.php
sinople-journal-theme/schemas/capnproto/: sinople.capnp
sinople-journal-theme/schemas/flatbuffers/: sinople.fbs
sinople-journal-theme/semantic/: ontology.owl  portal.ttl  void.ttl
sinople-journal-theme/semantic/constructs/: EXPLAINME.md  construct-name.owl  eteri.jsonld  luna.ttl
sinople-journal-theme/semantic/glosses/: glosses.owl  (+3 more)
sinople-journal-theme/templates/: content-none.php  content.php
sinople-journal-theme/tests/: aria-checklist.md  bootstrap.php  microformats-preview.html  rdfa-preview.html  semantic-test-post.html  validator-links.md
(+635 files in other folders)
