[workspace]
resolver = "2"
members = [
    "crates/fslint-plugin-api",
    "crates/fslint-plugin-sdk",
    "crates/fslint-core",
    "crates/fslint-cli",
    "plugins/git-status",
    "plugins/file-age",
    "plugins/grouping",
    "plugins/version-detection",
    "plugins/ocr-status",
    "plugins/ai-detection",
    "plugins/duplicate-finder",
    "plugins/secret-scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FSLint Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hyperpolymath/file-soup"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
colored = "2.1"

# File system operations
walkdir = "2.4"
ignore = "0.4"

# Git operations
git2 = "0.20"

# Time operations
chrono = "0.4"

# WASM runtime
wasmtime = "16.0"

# Config
toml = "0.8"
directories = "5.0"

# Hashing for duplicate detection
sha2 = "0.10"
hex = "0.4"

# Image metadata
image = "0.24"
kamadak-exif = "0.5"

# PDF operations
pdf = "0.8"

# Regex for secret scanning
regex = "1.10"
lazy_static = "1.4"

# Testing
proptest = "1.4"
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
