[package]
name = "asdf-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "asdf-monitor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
asdf-core = { path = "../asdf-core" }
asdf-metrics = { path = "../asdf-metrics" }
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
