[package]
name = "fslint-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for FSLint - scanner, plugin loader, and config"

[dependencies]
fslint-plugin-api = { path = "../fslint-plugin-api" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }

# Plugin dependencies (for built-in loading)
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "scanner_benchmark"
harness = false
