[package]
name = "fslint-plugin-version-detection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Version detection plugin for FSLint - finds newest among versioned files"

[dependencies]
fslint-plugin-api = { path = "../../crates/fslint-plugin-api" }
fslint-plugin-sdk = { path = "../../crates/fslint-plugin-sdk" }
regex = { workspace = true }
lazy_static = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
